--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,12 @@
 {
   "hosting": {
-    "public": ".",
+    "public": "functions/public",
+    "rewrites": [
+      {
+        "source": "/album/**",
+        "function": "rewriter"
+      }
+    ],
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -8,5 +14,21 @@
       "**/js/env.js",
       "**/js/*-test.js"
     ]
-  }
+  },
+  "functions":
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run lint"
+      ]
+    }
+
 }
