Redirect `?fileId={fileId}` to `/album/{fileId}`

--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,10 @@
       {
         "source": "/album/**",
         "function": "rewriter"
+      },
+      {
+        "source": "/?fileId=:fileId",
+        "destination": "/album/:fileId"
       }
     ],
     "ignore": [
