Fix firebase function - rewriter

--- a/firebase.json
+++ b/firebase.json
@@ -3,12 +3,8 @@
     "public": "functions/public",
     "rewrites": [
       {
-        "source": "/album/**",
+        "source": "/**",
         "function": "rewriter"
-      },
-      {
-        "source": "/?fileId=:fileId",
-        "destination": "/album/:fileId"
       }
     ],
     "ignore": [
